--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -12,25 +12,31 @@ logging.loggers.root.channel: c1
 logging.loggers.root.level: debug
 ion.offline-interval: 10
 ion.eventsage: 7
+
 ion.events.ip_offline.mail: false
 ion.events.ip_offline.save: true
 ion.events.ip_offline.syslog: false
+ion.events.ip_offline.text: IP Offline: [mac] [ip] [last_seen] [interface]
 
 ion.events.ip_online.mail: false
 ion.events.ip_online.save: true
 ion.events.ip_online.syslog: false
+ion.events.ip_online.text: IP Online: [mac] [ip] [last_seen] [interface]
 
 ion.events.thing_online.mail: false
 ion.events.thing_online.save: true
 ion.events.thing_online.syslog: false
+ion.events.thing_online.text: Thing online: [type] [name] [os] [vendor] [desc]
 
 ion.events.thing_offline.mail: false
 ion.events.thing_offline.save: true
 ion.events.thing_offline.syslog: false
+ion.events.thing_offline.text: Thing offline: [type] [name] [os] [vendor] [desc]
 
 ion.events.not_authorized.mail: false
 ion.events.not_authorized.save: true
 ion.events.not_authorized.syslog: false
+ion.events.not_authorized.text: Not Authorized: [mac] [ip] [last_seen] [interface]
 
 ion.mail.sender:
 ion.mail.recipient:
