--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -41,7 +41,7 @@ ion.events.not_authorized.text: Not Authorized: [mac] [ip] [last_seen] [interfac
 ion.mail.sender:
 ion.mail.recipient:
 ion.mail.subject:
-ion.mail.ssl:
+ion.mail.ssl: false
 ion.mail.host:
 ion.mail.port: 25
 ion.mail.loginmethod:
