--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -12,6 +12,7 @@ logging.loggers.root.channel: c1
 logging.loggers.root.level: debug
 ion.offline-interval: 10
 ion.eventsage: 7
+ion.ignoreLinkLocal: true
 
 ion.events.ip_offline.mail: false
 ion.events.ip_offline.save: true
