--- a/.hgignore
+++ b/.hgignore
@@ -28,3 +28,15 @@ lib/libnet-1.2-rc3/include/libnet/stdint.h
 packages/
 ion.opensdf
 *.sdf
+lib/openssl-1.0.2/out32/
+lib/openssl-1.0.2/tmp32/
+lib/openssl-1.0.2/inc32/
+lib/openssl-1.0.2/MINFO
+lib/openssl-1.0.2/crypto/buildinf.h
+lib/openssl-1.0.2/crypto/opensslconf.h.bak
+lib/openssl-1.0.2/ms/bcb.mak
+lib/openssl-1.0.2/ms/libeay32.def
+lib/openssl-1.0.2/ms/nt.mak
+lib/openssl-1.0.2/ms/ntdll.mak
+lib/openssl-1.0.2/ms/ssleay32.def
+lib/openssl-1.0.2/ms/version32.rc
