--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -22,7 +22,7 @@ ion.events.ip_offline.text: IP Offline: [mac] [ip] [last_seen] [interface]
 ion.events.ip_online.mail: false
 ion.events.ip_online.save: true
 ion.events.ip_online.syslog: false
-ion.events.ip_online.text: IP Online: [mac] [ip] [last_seen] [interface]
+ion.events.ip_online.text: IP address [ip] became online at [timestamp]
 
 ion.events.thing_online.mail: false
 ion.events.thing_online.save: true
