--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -17,7 +17,7 @@ ion.ignoreLinkLocal: true
 ion.events.ip_offline.mail: false
 ion.events.ip_offline.save: true
 ion.events.ip_offline.syslog: false
-ion.events.ip_offline.text: IP Offline: [mac] [ip] [last_seen] [interface]
+ion.events.ip_offline.text: IP address [ip] became offline at [timestamp]
 
 ion.events.ip_online.mail: false
 ion.events.ip_online.save: true
@@ -27,17 +27,17 @@ ion.events.ip_online.text: IP address [ip] became online at [timestamp]
 ion.events.thing_online.mail: false
 ion.events.thing_online.save: true
 ion.events.thing_online.syslog: false
-ion.events.thing_online.text: Thing online: [type] [name] [os] [vendor] [desc]
+ion.events.thing_online.text: Thing [desc] became online at [timestamp]
 
 ion.events.thing_offline.mail: false
 ion.events.thing_offline.save: true
 ion.events.thing_offline.syslog: false
-ion.events.thing_offline.text: Thing offline: [type] [name] [os] [vendor] [desc]
+ion.events.thing_offline.text: Thing [desc] became offline at [timestamp]
 
 ion.events.not_authorized.mail: false
 ion.events.not_authorized.save: true
 ion.events.not_authorized.syslog: false
-ion.events.not_authorized.text: Not Authorized: [mac] [ip] [last_seen] [interface]
+ion.events.not_authorized.text: Unauthorized thing with address [mac] [ip] connected at [timestamp]
 
 ion.mail.sender:
 ion.mail.recipient:
