--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -13,6 +13,7 @@ logging.loggers.root.level: debug
 ion.offline-interval: 10
 ion.eventsage: 7
 ion.ignoreLinkLocal: true
+ion.web.address: 0.0.0.0:9980
 
 ion.events.ip_offline.mail: false
 ion.events.ip_offline.save: true
