--- a/ion/ion.properties
+++ b/ion/ion.properties
@@ -10,8 +10,11 @@ logging.channels.c1.purgeCount: 3
 logging.channels.c1.rotation: 5 M
 logging.loggers.root.channel: c1
 logging.loggers.root.level: debug
+
 ion.offline-interval: 10
+ion.traffic-interval: 3
 ion.eventsage: 7
+ion.trafficage: 1
 ion.ignoreLinkLocal: true
 ion.web.address: 0.0.0.0:9980
 
@@ -39,6 +42,11 @@ ion.events.not_authorized.mail: false
 ion.events.not_authorized.save: true
 ion.events.not_authorized.syslog: false
 ion.events.not_authorized.text: Unauthorized thing with address [mac] [ip] connected at [timestamp]
+
+ion.events.not_authorized_traffic.mail: false
+ion.events.not_authorized_traffic.save: true
+ion.events.not_authorized_traffic.syslog: false
+ion.events.not_authorized_traffic.text: Found [count] unauthorized sessions
 
 ion.mail.sender:
 ion.mail.recipient:
